@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add more extended statistics information: applied stats. These allow
+clients to distinguish between depleted stats and stat changes due to gear
+or skills.
+Andreas Kirschbaum 2010-04-03
+
 socket/request.c
 - Fix segfault when client requests spellmon 2.
 Kevin Bulgrien 2010-04-02
